--- a/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
@@ -71,7 +71,15 @@
                     </div>
 
 
-
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute0.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute0.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute0.Value)
+                            @Html.TextBoxFor(x => x.Attribute0.Value, new { @class="form-control genislik"})
+                        </div>
+                    </div>
 
 
                     <br /> <br />
