Attribute'lar ile birlikte güncelleme tamamlandı

--- a/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
@@ -23,7 +23,7 @@
         <div class="col-sm-12">
             <section class="panel">
                 <header class="panel-heading">
-                    Ürün Ekleme Sayfası
+                    Ürün Güncelleme Sayfası
                 </header>
                 <div class="panel-body">
                     <div class="form-group">
@@ -77,10 +77,80 @@
                         <div class="col-sm-10">
                             @Html.HiddenFor(x => x.Attribute0.Name)
                             @Html.ValidationMessageFor(x => x.Attribute0.Value)
-                            @Html.TextBoxFor(x => x.Attribute0.Value, new { @class="form-control genislik"})
+                            @Html.TextBoxFor(x => x.Attribute0.Value, new { @class = "form-control genislik" })
                         </div>
                     </div>
 
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute1.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute1.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute1.Value)
+                            @Html.TextBoxFor(x => x.Attribute1.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
+
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute2.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute2.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute2.Value)
+                            @Html.TextBoxFor(x => x.Attribute2.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
+
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute3.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute3.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute3.Value)
+                            @Html.TextBoxFor(x => x.Attribute3.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
+
+
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute4.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute4.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute4.Value)
+                            @Html.TextBoxFor(x => x.Attribute4.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
+
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute5.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute5.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute5.Value)
+                            @Html.TextBoxFor(x => x.Attribute5.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
+
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute6.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute6.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute6.Value)
+                            @Html.TextBoxFor(x => x.Attribute6.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
+
+                    <br /><br />
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">@Model.Attribute7.Name</label>
+                        <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute7.Name)
+                            @Html.ValidationMessageFor(x => x.Attribute7.Value)
+                            @Html.TextBoxFor(x => x.Attribute7.Value, new { @class = "form-control genislik" })
+                        </div>
+                    </div>
 
                     <br /> <br />
                     <div class="form-group">
