Product CRUD tamamlandı ve view'lara colspan eklendi

--- a/Project.MVCUI/Areas/Admin/Views/Product/ProductList.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/ProductList.cshtml
@@ -39,9 +39,7 @@
                         <th class="text-center">Resmi</th>
                         <th class="text-center hidden-phone; text-center">Kategorisi</th>
                         <th class="text-center hidden-phone; text-center">Durum</th>
-                        <th class="text-center hidden-phone; text-center">Gözat</th>
-                        <th class="text-center hidden-phone; text-center">Güncelle</th>
-                        <th class="text-center hidden-phone; text-center">Sil</th>
+                        <th class="text-center hidden-phone; text-center" colspan="3">İşlemler</th>
                     </tr>
                 </thead>
                 <tbody id="body">
