--- a/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
@@ -75,6 +75,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute0.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute0.ID)
                             @Html.HiddenFor(x => x.Attribute0.Name)
                             @Html.ValidationMessageFor(x => x.Attribute0.Value)
                             @Html.TextBoxFor(x => x.Attribute0.Value, new { @class = "form-control genislik" })
@@ -85,6 +86,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute1.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute1.ID)
                             @Html.HiddenFor(x => x.Attribute1.Name)
                             @Html.ValidationMessageFor(x => x.Attribute1.Value)
                             @Html.TextBoxFor(x => x.Attribute1.Value, new { @class = "form-control genislik" })
@@ -95,6 +97,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute2.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute2.ID)
                             @Html.HiddenFor(x => x.Attribute2.Name)
                             @Html.ValidationMessageFor(x => x.Attribute2.Value)
                             @Html.TextBoxFor(x => x.Attribute2.Value, new { @class = "form-control genislik" })
@@ -105,6 +108,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute3.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute3.ID)
                             @Html.HiddenFor(x => x.Attribute3.Name)
                             @Html.ValidationMessageFor(x => x.Attribute3.Value)
                             @Html.TextBoxFor(x => x.Attribute3.Value, new { @class = "form-control genislik" })
@@ -116,6 +120,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute4.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute4.ID)
                             @Html.HiddenFor(x => x.Attribute4.Name)
                             @Html.ValidationMessageFor(x => x.Attribute4.Value)
                             @Html.TextBoxFor(x => x.Attribute4.Value, new { @class = "form-control genislik" })
@@ -126,6 +131,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute5.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute5.ID)
                             @Html.HiddenFor(x => x.Attribute5.Name)
                             @Html.ValidationMessageFor(x => x.Attribute5.Value)
                             @Html.TextBoxFor(x => x.Attribute5.Value, new { @class = "form-control genislik" })
@@ -136,6 +142,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute6.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute6.ID)
                             @Html.HiddenFor(x => x.Attribute6.Name)
                             @Html.ValidationMessageFor(x => x.Attribute6.Value)
                             @Html.TextBoxFor(x => x.Attribute6.Value, new { @class = "form-control genislik" })
@@ -146,6 +153,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">@Model.Attribute7.Name</label>
                         <div class="col-sm-10">
+                            @Html.HiddenFor(x => x.Attribute7.ID)
                             @Html.HiddenFor(x => x.Attribute7.Name)
                             @Html.ValidationMessageFor(x => x.Attribute7.Value)
                             @Html.TextBoxFor(x => x.Attribute7.Value, new { @class = "form-control genislik" })
