--- a/Project.MVCUI/Areas/Admin/Views/Category/CategoryList.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Category/CategoryList.cshtml
@@ -21,9 +21,7 @@
                         <th>Kategori Adı</th>
                         <th class="hidden-phone">Kategori Açıklaması</th>
                         <th class="text-center hidden-phone">Durum</th>
-                        <th class="text-center hidden-phone">Ürünleri</th>
-                        <th class="text-center hidden-phone; text-center">Güncelle</th>
-                        <th class="text-center hidden-phone; text-center">Sil</th>
+                        <th class="text-center hidden-phone; text-center" colspan="3">İşlemler</th>
                     </tr>
                 </thead>
                 <tbody id="body">
