authoriza controller eklendi ve password validation düzenlendi

--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -111,6 +111,7 @@
                             <ul class="sub">
                                 <li><a href="@Url.Action("CategoryList", new { @controller="Category", area="Admin"})">Kategori İşlemleri</a></li>
                                 <li><a href="@Url.Action("ProductList", new { @controller="Product", area="Admin"})">Ürün İşlemleri</a></li>
+                                <li><a href="@Url.Action("UserList", new { @controller="Authority", area="Admin"})">Yetki İşlemleri</a></li>
                             </ul>
                         </li>
                     }
