--- a/Project.MVCUI/Views/Address/AddAddress.cshtml
+++ b/Project.MVCUI/Views/Address/AddAddress.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "AddAddress";
 }
 
+<div class="alert-danger text-center" style="font-size:large">
+    @TempData["hata"]
+</div>
+
 <section id="container" class="">
     <div class="row">
         <aside class="profile-nav col-lg-3">
