HomeController'daki profil işlemleri ProfileController'a aktarıldı

--- a/Project.MVCUI/Views/Address/AddAddress.cshtml
+++ b/Project.MVCUI/Views/Address/AddAddress.cshtml
@@ -20,8 +20,8 @@
                 </div>
 
                 <ul class="nav nav-pills nav-stacked">
-                    <li><a href="@Url.Action("ProfileDetail", "Home")"> <i class="icon-user"></i> Profil</a></li>
-                    <li><a href="@Url.Action("EditProfile", "Home", new { id=Model.User.ID})"> <i class="icon-edit"></i> Profili düzenle</a></li>
+                    <li><a href="@Url.Action("ProfileDetail", "Profile")"> <i class="icon-user"></i> Profil</a></li>
+                    <li><a href="@Url.Action("EditProfile", "Profile", new { id=Model.User.ID})"> <i class="icon-edit"></i> Profili düzenle</a></li>
                     <li><a href="@Url.Action("Addresses")"> <i class="icon-road"></i> Adresler</a></li>
                 </ul>
 
