--- a/Project.MVCUI/Views/Address/Addresses.cshtml
+++ b/Project.MVCUI/Views/Address/Addresses.cshtml
@@ -16,8 +16,8 @@
                 </div>
 
                 <ul class="nav nav-pills nav-stacked">
-                    <li><a href="@Url.Action("ProfileDetail", "Home", new { area=""})"> <i class="icon-user"></i> Profil</a></li>
-                    <li><a href="@Url.Action("EditProfile", "Home", new { id=Model.User.ID, area=""})"> <i class="icon-edit"></i> Profili düzenle</a></li>
+                    <li><a href="@Url.Action("ProfileDetail", "Profile", new { area=""})"> <i class="icon-user"></i> Profil</a></li>
+                    <li><a href="@Url.Action("EditProfile", "Profile", new { id=Model.User.ID, area=""})"> <i class="icon-edit"></i> Profili düzenle</a></li>
                     <li class="active"><a href="@Url.Action("Addresses", new { area=""})"> <i class="icon-road"></i> Adresler</a></li>
                 </ul>
 
