--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -173,7 +173,13 @@
                                 <li><a href="@Url.Action("RegisterNow", new { @controller="Register", area=""})">Üye Ol</a></li>
                             </ul>
                         </li>
-                    }                    
+                    }
+                    <li>
+                        <a href="@Url.Action("ContactUs", new { @controller="Home", area=""})">
+                            <i class="icon-comments"></i>
+                            <span>Bize Ulaşın</span>
+                        </a>
+                    </li>
                 </ul>
                 <!-- sidebar menu end-->
             </div>
