--- a/Project.MVCUI/Areas/Admin/Views/Product/ProductList.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/ProductList.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="alert-danger text-center" style="font-size:large">@TempData["hataCRUD"]</div>
+<div class="alert-danger text-center" style="font-size:large">@TempData["hataCRUD"] @TempData["hata"]</div>
 
 <div class="text-center" style="font-family:'Agency FB'; font-size:x-large">Ürünler</div>
 
