--- a/Project.MVCUI/Views/Address/AddAddress.cshtml
+++ b/Project.MVCUI/Views/Address/AddAddress.cshtml
@@ -114,12 +114,11 @@
                                 </div>
                             </div>
 
-                            <br /><br />
+                            <br /><br /><br />
 
-                            <div class="form-group">
-                                <label class="control-label col-lg-2" style="font-size:large">Ekle: </label>
-                                <div class="col-lg-10">
-                                    <button class="btn btn-round btn-success">Ekle</button>
+                            <div class="form-group">  
+                                <div class="col-lg-10" >
+                                    <button class="btn btn-round btn-success" style="width:100px">Ekle</button>
                                 </div>
                             </div>
                         }
