Fiyat güncelleme kısmı düzeltildi

--- a/Project.MVCUI/Views/Home/CargoTracking.cshtml
+++ b/Project.MVCUI/Views/Home/CargoTracking.cshtml
@@ -50,7 +50,7 @@
 
             $.ajax({
 
-                url: "http://localhost:44351/api/Home/GetCargo",
+                url: "https://localhost:44351/api/Home/GetCargo",
                 typ: "GET",
                 data: { id: $("#txtID").val() },
                 success: function (data) {
