Birim fiyatına . ile girişlerde otomatik 1TL atandı

--- a/Project.MVCUI/Areas/Admin/Views/Product/AddProduct.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/AddProduct.cshtml
@@ -14,6 +14,10 @@
     }
 </style>
 
+<div class="text-center" style="font-family:'Times New Roman', Times, serif; font-weight:bold; color:green; font-size:large">
+    <p>Birim fiyatı kısmında '.' (nokta) ile fiyat girişi kabul edilmediğinden ürünün fiyatı 1TL olarak gözükecektir!</p>
+</div>
+
 @using (Html.BeginForm("AddProduct", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="row">
