Silinene kullanıcının tekrar girişi engellendi

--- a/Project.MVCUI/Views/Address/UpdateAddress.cshtml
+++ b/Project.MVCUI/Views/Address/UpdateAddress.cshtml
@@ -118,7 +118,7 @@
                             <br /><br />
 
                             <div class="form-group">
-                                <label class="control-label col-lg-2" style="font-size:large">Ekle: </label>
+                                <label class="control-label col-lg-2" style="font-size:large"></label>
                                 <div class="col-lg-10">
                                     <button class="btn btn-round btn-warning">Güncelle</button>
                                 </div>
