--- a/Project.MVCUI/Views/Profile/EditProfile.cshtml
+++ b/Project.MVCUI/Views/Profile/EditProfile.cshtml
@@ -104,7 +104,7 @@
                             <br /><br /><br />
 
                             <div class="form-group">
-                                <label class="control-label col-lg-2" style="font-size:large">Güncelle: </label>
+                                <label class="control-label col-lg-2" style="font-size:large"></label>
                                 <div class="col-lg-10">
                                     <button class="btn btn-success text-center">Güncelle</button>
                                 </div>
